Update product
